# bocs

./: .gitignore  4_line_motif_test.txt  Cargo.toml  README.md
report/: analysis.ipynb  report.md
scripts/: epp.sh
src/: cms.rs  hash.rs  hasher.rs  lib.rs  main.rs  parser.rs
src/cms/: hash.rs  mod.rs
src/parser/: mod.rs
tests/: larger_test.txt  largerer_test.txt
