[package]
name = "epp"
version = "0.1.0"
authors = ["ShaneEverittM <shane.everitt.murphy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
itertools = "0.10.0"
clap = "2.33.3"
log = "0.4"
simplelog = "0.9.0"